# professional-agentic-learning

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run-all.sh  stop-all.sh
backend/: .env.example  README.md  pyproject.toml
backend/apps/api_app/: middleware.py  router.py  schemas.py
backend/apps/conversations/: models.py  services.py
backend/apps/conversations/migrations/: 0001_initial.py  0002_conversation_summary.py
backend/apps/learning/: context.py  models.py  prompts.py  services.py
backend/apps/learning/migrations/: 0001_initial.py  0002_learningcard_next_topic.py
backend/apps/providers/: models.py  services.py
backend/apps/providers/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/tests/: test_api_security.py  test_context_budget.py  test_models_and_rules.py  test_provider_real.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/: style.css  types.ts
frontend/src/api/: client.ts  conversations.ts  learning.ts  provider.ts
frontend/src/components/: ActionBar.vue  ChatInput.vue  MarkdownRenderer.vue  MessageBubble.vue  ProviderStatus.vue  QuizCard.vue  Sidebar.vue
frontend/src/router/: index.ts
frontend/src/stores/: conversations.ts  layout.ts  messages.ts  provider.ts
frontend/src/utils/: confetti.ts  markdown.ts  pdf.ts  sse.ts  storage.ts
frontend/src/views/: ChatView.vue
prd/: api.md  backend-prd.md  backend-task.md  env.md  frontend-prd.md  frontend-task.md  project-tree.md
