[project]
name = "professional-agentic-learning"
version = "0.1.0"
description = "AI learning card system with Django backend and Vue frontend."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
DJANGO_SETTINGS_MODULE = "backend.settings"
python_files = ["test_*.py"]
